--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "java.home": "C:\\Program Files\\Java\\jdk1.8.0_131",
+    // "java.home": "C:\\Program Files\\Java\\jdk1.8.0_131",
     "java.configuration.updateBuildConfiguration": "interactive"
 }
